--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": "~8.3.0||~8.4.0"
+        "php": "~8.1.0||~8.2.0||~8.3.0||~8.4.0"
     },
     "autoload": {
         "files": [
